# collector

./: Cargo.toml
src/: main.rs
src/handler/: handle.rs  mod.rs  structs.rs  test.rs
src/people/: mod.rs
src/people/person/: gender.rs  mod.rs  person.rs  structs.rs  test.rs
src/prelude/: mod.rs  que.rs  test.rs
