[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"]}
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.96"
futures = "0.3.28"