[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = {version = "0.3.15", features = ["futures-io", "gzip"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.17", features = ["stream", "json"]}
native-tls = { version = "0.2.6", features = ["vendored"] }
serde = { version = "1.0.162", features = ["derive"]}
chrono = {version = "0.4.24", features = ["clock", "serde"]}
lambda_runtime = "0.8.1"
serde_json = "1.0.96"
static_init = "1.0.3"
futures = "0.3.28"
rayon = "1.7.0"